corrected css issue in style.css, site now displays in block on mobile

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -221,44 +221,46 @@ h4 {
   box-shadow: 5px 5px 10px #6f7364;
 }
 
+
 @media screen and (max-width: 900px) {
-  #hero, .home-grid {
-    display: block;
-    height: auto;
+  #hero, main.home-grid {
+      display: block;
+      height: auto;
   }
   nav, footer {
-    flex-direction: column;
+      flex-direction: column;
   }
   nav a {
-    display: block;
-    padding: 15px;
+      display: block;
+      padding: 15px;
   }
   #hero {
-    margin-top: 0;
+      margin-top: 0;
   }
   #hero-msg {
-    margin-top: 0;
+      margin-top: 0;
   }
-  #hero-msg h4{
-    display: none;
+  #hero-msg h4 {
+      display: none;
   }
   .home-title {
-    font-size: 25px;
-    color: #6f7364;
+      font-size: 25px;
+      color: #6f7364;
   }
-  .rivers-card, .camping-card, .rapids-card {
-    margin: 50px auto;
-    width: 60%;
+  .rivers-card, .camping-card, .rapids-card { 
+      margin: 50px auto;
+      width: 60%;
   }
   #background {
-    display: none;
+      display: none;
   }
   .mountains, .msg {
-    width: 80%;
-    display: block;
-    margin: 0 auto;
+      width: 80%;
+      display: block;
+      margin: 0 auto;
   }
   footer {
-    margin-top: 25px;
+      margin-top: 25px;
   }
 }
+          
